--- a/SVHN.ipynb
+++ b/SVHN.ipynb
@@ -78,25 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-f9da1386f852>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    148\u001b[0m                                                     feed_dict={x: batch_x, \n\u001b[1;32m    149\u001b[0m                                                                \u001b[0my\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_y\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m                                                                keep_prob: train_keep_prob})\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m             \u001b[0msummary_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_summary\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtotal_batches\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mbatch_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/baha/anaconda2/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    765\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    766\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 767\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    768\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    769\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/baha/anaconda2/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    963\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    964\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 965\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    966\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    967\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/baha/anaconda2/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1013\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1014\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m-> 1015\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m   1016\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1017\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
-      "\u001b[0;32m/Users/baha/anaconda2/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1020\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1021\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1022\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1023\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1024\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/baha/anaconda2/lib/python2.7/site-packages/tensorflow/python/client/session.pyc\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1002\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[1;32m   1003\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1004\u001b[0;31m                                  status, run_metadata)\n\u001b[0m\u001b[1;32m   1005\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1006\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0001 cost= 88920.944776348\n",
+      "Epoch: 0002 cost= 44203.766659007\n",
+      "\n",
+      "Optimization Finished!\n",
+      "\n",
+      "Accuracy: 0.253\n",
+      "----------------------------------------------------------------------\n",
+      "Run the following to start tensorboard server:\n",
+      "tensorboard --logdir=//Users/baha/workspace/svhn/logs/20170419_1916/\n"
      ]
     }
    ],
@@ -106,20 +105,25 @@
     "from datetime import datetime\n",
     "import os\n",
     "\n",
-    "# RESET TF\n",
+    "# RESET TF GRAPH, just in case\n",
     "tf.reset_default_graph()\n",
     "\n",
     "# LOAD DATA\n",
     "train_test_valid_split = [0.7, 0.15, 0.15]\n",
     "#svhn = gen_input.read_data_sets(\"data/train_32x32.mat\", train_test_valid_split)\n",
     "\n",
-    "# Parameters\n",
-    "learning_rate = 1e-2\n",
-    "training_epochs = 5\n",
+    "##########################################\n",
+    "##                                      ##\n",
+    "##              Parameters              ##\n",
+    "##                                      ##\n",
+    "##########################################\n",
+    "# Training Parameters\n",
+    "learning_rate = 1e-3\n",
+    "training_epochs = 2 # <--- should be higher\n",
     "batch_size = 100\n",
-    "total_batches = int(0.2 * svhn.train.num_examples / batch_size)\n",
+    "total_batches = int(0.1 * svhn.train.num_examples / batch_size) # <-- remove 0.1\n",
     "\n",
-    "# Network Parameters\n",
+    "# Data Parameters\n",
     "n_input = 1024 # SVHN data input (img shape: 32*32)\n",
     "n_classes = 10 # total classes (0-9 digits)\n",
     "channels = 3\n",
@@ -127,46 +131,26 @@
     "\n",
     "ts = datetime.now().strftime('%Y%m%d_%H%M')\n",
     "logs_path = \"logs/{}/\".format(ts)\n",
-    "#if not os.path.exists(logs_path): os.makedirs(logs_path)\n",
-    "\n",
-    "        \n",
-    "# input images\n",
-    "with tf.name_scope('input'):\n",
-    "    x = tf.placeholder(tf.float32, shape=[None, n_input, channels], name=\"x_input\") \n",
-    "    y = tf.placeholder(tf.float32, shape=[None, n_classes], name=\"y_actual\")\n",
-    "    \n",
-    "keep_prob = tf.placeholder(tf.float32)\n",
-    "\n",
-    "weights = {\n",
-    "    # 5x5 conv, 1 input, 32 outputs\n",
-    "    'wc1': tf.Variable(tf.random_normal([5, 5, channels, 32]), name=\"weights_conv1\"), # 32\n",
-    "    # 5x5 conv, 32 inputs, 64 outputs\n",
-    "    'wc2': tf.Variable(tf.random_normal([5, 5, 32, 64]), name=\"weights_conv2\"), # 16\n",
-    "    # fully connected, 7*7*64 inputs, 1024 outputs\n",
-    "    'wd1': tf.Variable(tf.random_normal([8*8*64, 4096]), name=\"weights_fc1\"), # 8\n",
-    "    # 1024 inputs, 10 outputs (class prediction)\n",
-    "    'out': tf.Variable(tf.random_normal([4096, n_classes]), name=\"weights_output\")\n",
-    "}\n",
-    "\n",
-    "biases = {\n",
-    "    'bc1': tf.Variable(tf.random_normal([32]), name=\"bias_conv1\"),\n",
-    "    'bc2': tf.Variable(tf.random_normal([64]), name=\"bias_conv2\"),\n",
-    "    'bd1': tf.Variable(tf.random_normal([4096]), name=\"bias_fc1\"),\n",
-    "    'out': tf.Variable(tf.random_normal([n_classes]), name=\"bias_output\")\n",
-    "}\n",
     "\n",
     "\n",
-    "# Create some wrappers for simplicity\n",
+    "##########################################\n",
+    "##                                      ##\n",
+    "##            Helper Wrappers           ##\n",
+    "##                                      ##\n",
+    "##########################################\n",
+    "# Conv2D wrapper, with bias and relu activation\n",
     "def conv2d(x, W, b, strides=1):\n",
-    "    # Conv2D wrapper, with bias and relu activation\n",
-    "    x = tf.nn.conv2d(x, W, strides=[1, strides, strides, 1], padding='SAME')\n",
+    "    x = tf.nn.conv2d(x, W, \n",
+    "                     strides=[1, strides, strides, 1], \n",
+    "                     padding='SAME')\n",
     "    x = tf.nn.bias_add(x, b)\n",
     "    return tf.nn.relu(x)\n",
     "\n",
-    "\n",
+    "# MaxPool2D wrapper\n",
     "def maxpool2d(x, k=2):\n",
-    "    # MaxPool2D wrapper\n",
-    "    return tf.nn.max_pool(x, ksize=[1, k, k, 1], strides=[1, k, k, 1],\n",
+    "    return tf.nn.max_pool(x, \n",
+    "                          ksize=[1, k, k, 1], \n",
+    "                          strides=[1, k, k, 1],\n",
     "                          padding='SAME')\n",
     "\n",
     "\n",
@@ -194,6 +178,39 @@
     "    out = tf.add(tf.matmul(fc1, weights['out']), biases['out'])\n",
     "    return out\n",
     "\n",
+    "        \n",
+    "##########################################\n",
+    "##                                      ##\n",
+    "##            Variable Scopes           ##\n",
+    "##            (for neatness)            ##\n",
+    "##########################################\n",
+    "\n",
+    "with tf.name_scope('input'):\n",
+    "    x = tf.placeholder(tf.float32, shape=[None, n_input, channels], name=\"x_input\") \n",
+    "    y = tf.placeholder(tf.float32, shape=[None, n_classes], name=\"y_actual\")\n",
+    "\n",
+    "with tf.name_scope('dropout'):\n",
+    "    keep_prob = tf.placeholder(tf.float32)\n",
+    "\n",
+    "with tf.name_scope('weights'):\n",
+    "    weights = {\n",
+    "        # 5x5 conv, 1 input, 32 outputs\n",
+    "        'wc1': tf.Variable(tf.random_normal([5, 5, channels, 32]), name=\"weights_conv1\"), # 32\n",
+    "        # 5x5 conv, 32 inputs, 64 outputs\n",
+    "        'wc2': tf.Variable(tf.random_normal([5, 5, 32, 64]), name=\"weights_conv2\"), # 16\n",
+    "        # fully connected, 7*7*64 inputs, 1024 outputs\n",
+    "        'wd1': tf.Variable(tf.random_normal([8*8*64, 4096]), name=\"weights_fc1\"), # 8\n",
+    "        # 1024 inputs, 10 outputs (class prediction)\n",
+    "        'out': tf.Variable(tf.random_normal([4096, n_classes]), name=\"weights_output\")\n",
+    "    }\n",
+    "\n",
+    "with tf.name_scope('biases'):\n",
+    "    biases = {\n",
+    "        'bc1': tf.Variable(tf.random_normal([32]), name=\"bias_conv1\"),\n",
+    "        'bc2': tf.Variable(tf.random_normal([64]), name=\"bias_conv2\"),\n",
+    "        'bd1': tf.Variable(tf.random_normal([4096]), name=\"bias_fc1\"),\n",
+    "        'out': tf.Variable(tf.random_normal([n_classes]), name=\"bias_output\")\n",
+    "    }\n",
     "\n",
     "with tf.name_scope('Model'):\n",
     "    y_ = conv_net(x, weights, biases, keep_prob)\n",
@@ -214,12 +231,19 @@
     "    \n",
     "    # Op to update all variables according to their gradient\n",
     "    apply_grads = optimizer.apply_gradients(grads_and_vars=grads)\n",
+    "\n",
     "    \n",
     "\n",
     "# Initializing the variables\n",
     "init = tf.global_variables_initializer()\n",
     "\n",
-    "# Record metrics\n",
+    "\n",
+    "##########################################\n",
+    "##                                      ##\n",
+    "##               Metrics                ##\n",
+    "##           (for tensorboard)          ##\n",
+    "##########################################\n",
+    "# Summaries to visualize loss & accuracy\n",
     "tf.summary.scalar(\"loss\", loss)\n",
     "tf.summary.scalar(\"accuracy\", accuracy)\n",
     "\n",
@@ -235,14 +259,18 @@
     "\n",
     "merged_summaries = tf.summary.merge_all()\n",
     "\n",
-    "# Launch the graph\n",
+    "\n",
+    "##########################################\n",
+    "##                                      ##\n",
+    "##           Launch the graph           ##\n",
+    "##                                      ##\n",
+    "##########################################\n",
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
-    "\n",
     "    summary_writer = tf.summary.FileWriter(logs_path, graph=tf.get_default_graph())\n",
     "\n",
     "    # TRAINING MODEL\n",
-    "    for epoch in range(training_epochs):\n",
+    "    for epoch in xrange(training_epochs):\n",
     "        avg_loss = 0.0\n",
     "\n",
     "        for batch_num in range(total_batches):\n",
@@ -257,7 +285,7 @@
     "            avg_loss += batch_loss / total_batches\n",
     "            \n",
     "        # Display logs per epoch step\n",
-    "        print \"Epoch:\", '%04d' % (epoch+1), \"cost=\", \"{:.9f}\".format(avg_loss)\n",
+    "        print \"Epoch:\", '%04d' % (epoch+1), \"cost =\", \"{:.9f}\".format(avg_loss)\n",
     "\n",
     "    print \"\\nOptimization Finished!\\n\"\n",
     "\n",
