init non-zero biases

--- a/SVHN.ipynb
+++ b/SVHN.ipynb
@@ -242,38 +242,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "can't set attribute",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-109-8f2840e65a9f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Normalize data by subtracting mean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mchannels_means\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvhn_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0msvhn_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvhn_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mchannels_means\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0msvhn_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvhn_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mchannels_means\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute"
-     ]
-    }
-   ],
-   "source": [
-    "train_test_valid_split = [1.0, 0.0, 0.0] # data is already split, so everything is in .train\n",
-    "svhn_train = gen_input.read_data_sets(\"data/train_32x32.mat\", train_test_valid_split)\n",
-    "svhn_test = gen_input.read_data_sets(\"data/test_32x32.mat\", train_test_valid_split)\n",
-    "svhn_train = svhn_train.train\n",
-    "svhn_test = svhn_test.train\n",
-    "\n",
-    "# Normalize data by subtracting mean\n",
-    "channels_means = svhn_train.images.mean(axis=1).mean(axis=0)\n",
-    "svhn_train.images = svhn_train.images - channels_means\n",
-    "svhn_test.images = svhn_test.images - channels_means"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 110,
    "metadata": {
     "collapsed": true
@@ -283,82 +251,6 @@
     "channels_means = svhn_train.images.mean(axis=1).mean(axis=0)\n",
     "svhn_train_images = svhn_train.images - channels_means\n",
     "svhn_test_images = svhn_test.images - channels_means"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataSet' object has no attribute 'train'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-113-949737ebcb57>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msvhn_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataSet' object has no attribute 'train'"
-     ]
-    }
-   ],
-   "source": [
-    "type(svhn_train.train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.30911821, -0.32701468, -0.32492846],\n",
-       "       [-0.37970644, -0.35446566, -0.39943826],\n",
-       "       [-0.37970644, -0.37799507, -0.39943826],\n",
-       "       ..., \n",
-       "       [-0.00323582, -0.03681856, -0.13277158],\n",
-       "       [-0.01107895, -0.032897  , -0.13669315],\n",
-       "       [-0.03460836, -0.02897543, -0.16414413]], dtype=float32)"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "a = a - channels_means\n",
-    "a[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'rand'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-154-00849083b68a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'rand'"
-     ]
-    }
-   ],
-   "source": [
-    "random.rand(1000)"
    ]
   },
   {
@@ -840,6 +732,7 @@
     "\n",
     "with tf.name_scope('biases'):\n",
     "    biases = {\n",
+    "        'bc1': tf.Variable(tf.constant([32]), name=\"bias_conv1\"),\n",
     "        'bc1': tf.Variable(tf.random_normal([32]), name=\"bias_conv1\"),\n",
     "        'bc2': tf.Variable(tf.random_normal([64]), name=\"bias_conv2\"),\n",
     "        'bd1': tf.Variable(tf.random_normal([4096]), name=\"bias_fc1\"),\n",
