--- a/Test_Train_Curve.ipynb
+++ b/Test_Train_Curve.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -269,33 +269,41 @@
     "  # Every 10th step, measure test-set accuracy, and write test summaries\n",
     "  # All other steps, run train_step on training data, & add training summaries\n",
     "\n",
-    "  def feed_dict(train):\n",
+    "  def feed_dict(mode):\n",
     "    \"\"\"Make a TensorFlow feed_dict: maps data onto Tensor placeholders.\"\"\"\n",
-    "    if train == True:\n",
+    "    if mode == 'Train':\n",
     "      batch_x, batch_y = svhn_train.next_batch(batch_size)\n",
-    "      batch_x = normalize_batch(batch_x)\n",
     "      keep_proba = train_keep_prob\n",
-    "    elif train == False:\n",
+    "    elif mode == 'Test':\n",
     "      batch_x, batch_y = svhn_test.next_batch(test_batch_size)\n",
     "      keep_proba = 1.0\n",
-    "    else:\n",
+    "    elif mode == 'Train_no_drop':\n",
+    "      batch_x, batch_y = svhn_train.next_batch(batch_size)\n",
+    "      keep_proba = 1.0      \n",
+    "    elif mode == 'Final':\n",
     "      batch_x, batch_y = svhn_test.next_batch(svhn_test.num_examples)\n",
     "      keep_proba = 1.0      \n",
+    "    batch_x = normalize_batch(batch_x)\n",
     "    return {x: batch_x, y_: batch_y, keep_prob: keep_proba}\n",
     "\n",
     "  for epoch in xrange(training_epochs):\n",
     "    for batch_num in xrange(total_batches):\n",
     "      if batch_num % test_every == test_every - 1:  \n",
     "        # Record summaries and accuracy on the *test* set\n",
-    "        summary, acc = sess.run([merged, accuracy], feed_dict=feed_dict(train=False))\n",
+    "        summary, acc = sess.run([merged, accuracy], feed_dict=feed_dict(mode='Test'))\n",
     "        test_writer.add_summary(summary, epoch * total_batches + batch_num)\n",
-    "        print('Accuracy at epoch %s - batch %s: %s' % (epoch, batch_num, acc))\n",
-    "      else:\n",
-    "        sess.run([train_step], feed_dict=feed_dict(train=True))\n",
+    "        print('Test accuracy at epoch %s - batch %s: %s' % (epoch, batch_num, acc))\n",
     "\n",
+    "        # Now proceed to produce training summary too\n",
+    "        summary, _ = sess.run([merged, train_step], feed_dict=feed_dict(mode='Train_no_drop'))\n",
+    "        train_writer.add_summary(summary, i)\n",
+    "      else:\n",
+    "        sess.run([train_step], feed_dict=feed_dict(mode='Train'))\n",
+    "        \n",
+    "        \n",
     "  print \"\\nOptimization Finished!\\n\"\n",
     "  \n",
-    "  acc = sess.run([accuracy], feed_dict=feed_dict(train=None))\n",
+    "  acc = sess.run([accuracy], feed_dict=feed_dict(mode='Final'))\n",
     "  print('Accuracy at finish: %s' % (acc))\n",
     "\n",
     "  print \"-\"* 70\n",
@@ -311,17 +319,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy at epoch 0 - batch 15: 0.161736\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##########################################\n",
     "##                                      ##\n",
@@ -330,13 +330,13 @@
     "##########################################\n",
     "# Training Parameters\n",
     "learning_rate = 0.001\n",
-    "training_epochs = 10\n",
+    "training_epochs = 5\n",
     "\n",
-    "batch_size = 64 # 128\n",
-    "total_batches = int(0.3 * svhn_train.num_examples / batch_size) # train on 30% of the data\n",
+    "batch_size = 32 # 128\n",
+    "total_batches = int(0.1 * svhn_train.num_examples / batch_size) # train on 10% of the data\n",
     "\n",
-    "test_every = 16 # record test accuracy every 16 batches\n",
-    "test_batch_size = int(0.3*svhn_test.num_examples) # test on 30% of the data\n",
+    "test_every = 100 # record test accuracy every 16 batches\n",
+    "test_batch_size = int(0.1*svhn_test.num_examples) # test on 5% of the data\n",
     "\n",
     "# Keep probability \n",
     "train_keep_prob = 1.0 # no drop out\n",
