--- a/Test_Train_Curve.ipynb
+++ b/Test_Train_Curve.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +296,7 @@
     "\n",
     "        # Now proceed to produce training summary too\n",
     "        summary, _ = sess.run([merged, train_step], feed_dict=feed_dict(mode='Train_no_drop'))\n",
-    "        train_writer.add_summary(summary, i)\n",
+    "        train_writer.add_summary(summary, epoch * total_batches + batch_num)\n",
     "      else:\n",
     "        sess.run([train_step], feed_dict=feed_dict(mode='Train'))\n",
     "        \n",
@@ -330,13 +330,13 @@
     "##########################################\n",
     "# Training Parameters\n",
     "learning_rate = 0.001\n",
-    "training_epochs = 5\n",
+    "training_epochs = 3\n",
     "\n",
     "batch_size = 32 # 128\n",
     "total_batches = int(0.1 * svhn_train.num_examples / batch_size) # train on 10% of the data\n",
     "\n",
-    "test_every = 100 # record test accuracy every 16 batches\n",
-    "test_batch_size = int(0.1*svhn_test.num_examples) # test on 5% of the data\n",
+    "test_every = 32 # record test accuracy every 32 batches\n",
+    "test_batch_size = int(0.1*svhn_test.num_examples) # test on 10% of the data\n",
     "\n",
     "# Keep probability \n",
     "train_keep_prob = 1.0 # no drop out\n",
