--- a/Full Model with batch norm.ipynb
+++ b/Full Model with batch norm.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -71,6 +71,11 @@
     "##            Helper Wrappers           ##\n",
     "##                                      ##\n",
     "##########################################\n",
+    "\n",
+    "# Default stdev for weights and biases\n",
+    "init_std = 0.05\n",
+    "# Default decay, if non-zero\n",
+    "init_decay = 0.0025\n",
     "\n",
     "# We can't initialize these variables to 0 - the network will get stuck.\n",
     "def weight_variable(shape, stddev=init_std):\n",
@@ -98,7 +103,7 @@
     "def convlayer(layer_name, input_tensor, receptive_field, channels_in, channels_out,\n",
     "              padding='SAME', stride=1, act=tf.nn.relu, decay=0,\n",
     "              pool=False, pooler=tf.nn.max_pool, pool_size=2, pool_stride=2, pool_padding='SAME',\n",
-    "              batch_norm=True, training=training):\n",
+    "              batch_norm=True, training=True):\n",
     "  \"\"\"General purpose convolutional layer, followed by pooling\n",
     "\n",
     "  It does a matrix convolution, bias add, and then uses relu by default to nonlinearize.\n",
@@ -188,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +213,7 @@
     "  with tf.name_scope('test_train_variables'):\n",
     "    training = tf.placeholder(tf.bool) # for batch_norm mode\n",
     "    keep_prob = tf.placeholder(tf.float32) # for drop out\n",
-    "    tf.summary.scalar('training', training)\n",
+    "    tf.summary.scalar('training', tf.to_int32(training, name='ToInt32'))\n",
     "    tf.summary.scalar('dropout_keep_probability', keep_prob)\n",
     "  \n",
     "  with tf.name_scope('input'):\n",
@@ -231,7 +236,7 @@
     "  with tf.name_scope('conv2_flatten'):\n",
     "    conv_reshaped = tf.reshape(conv2, [-1, flat_dimension(conv2)])\n",
     "\n",
-    "  fc1 = nn_layer(layer_name='fc1', input_tensor=conv_reshaped, input_dim=dim, output_dim=512, decay=init_decay)\n",
+    "  fc1 = nn_layer(layer_name='fc1', input_tensor=conv_reshaped, input_dim=flat_dimension(conv2), output_dim=512, decay=init_decay)\n",
     "  dropped1 = tf.nn.dropout(fc1, keep_prob)\n",
     "\n",
     "  fc2 = nn_layer(layer_name='fc2', input_tensor=dropped1, input_dim=512, output_dim=256, decay=init_decay)\n",
@@ -326,87 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy at epoch 0 - batch 499: 0.316558\n",
-      "Test accuracy at epoch 0 - batch 999: 0.316942\n",
-      "Test accuracy at epoch 0 - batch 1499: 0.330772\n",
-      "Test accuracy at epoch 0 - batch 1999: 0.425663\n",
-      "Test accuracy at epoch 1 - batch 499: 0.498655\n",
-      "Test accuracy at epoch 1 - batch 999: 0.356896\n",
-      "Test accuracy at epoch 1 - batch 1499: 0.416443\n",
-      "Test accuracy at epoch 1 - batch 1999: 0.436035\n",
-      "Test accuracy at epoch 2 - batch 499: 0.301959\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "\n",
-      "Unfortunately, your original traceback can not be constructed.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/ultratb.py\", line 1120, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/ultratb.py\", line 301, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/ultratb.py\", line 346, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"/home/andy/anaconda2/envs/tensorflow/lib/python2.7/inspect.py\", line 1049, in getinnerframes\n",
-      "    framelist.append((tb.tb_frame,) + getframeinfo(tb, context))\n",
-      "  File \"/home/andy/anaconda2/envs/tensorflow/lib/python2.7/inspect.py\", line 1009, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"/home/andy/anaconda2/envs/tensorflow/lib/python2.7/inspect.py\", line 454, in getsourcefile\n",
-      "    if hasattr(getmodule(object, filename), '__loader__'):\n",
-      "  File \"/home/andy/anaconda2/envs/tensorflow/lib/python2.7/inspect.py\", line 491, in getmodule\n",
-      "    if ismodule(module) and hasattr(module, '__file__'):\n",
-      "KeyboardInterrupt\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/interactiveshell.pyc\u001b[0m in \u001b[0;36mrun_code\u001b[1;34m(self, code_obj, result)\u001b[0m\n\u001b[0;32m   2900\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2901\u001b[0m                 \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror_in_exec\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexc_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2902\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshowtraceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2903\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2904\u001b[0m             \u001b[0moutflag\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/interactiveshell.pyc\u001b[0m in \u001b[0;36mshowtraceback\u001b[1;34m(self, exc_tuple, filename, tb_offset, exception_only)\u001b[0m\n\u001b[0;32m   1828\u001b[0m                     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1829\u001b[0m                         stb = self.InteractiveTB.structured_traceback(etype,\n\u001b[1;32m-> 1830\u001b[1;33m                                             value, tb, tb_offset=tb_offset)\n\u001b[0m\u001b[0;32m   1831\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1832\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_showtraceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0metype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/ultratb.pyc\u001b[0m in \u001b[0;36mstructured_traceback\u001b[1;34m(self, etype, value, tb, tb_offset, number_of_lines_of_context)\u001b[0m\n\u001b[0;32m   1392\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1393\u001b[0m         return FormattedTB.structured_traceback(\n\u001b[1;32m-> 1394\u001b[1;33m             self, etype, value, tb, tb_offset, number_of_lines_of_context)\n\u001b[0m\u001b[0;32m   1395\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1396\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/ultratb.pyc\u001b[0m in \u001b[0;36mstructured_traceback\u001b[1;34m(self, etype, value, tb, tb_offset, number_of_lines_of_context)\u001b[0m\n\u001b[0;32m   1300\u001b[0m             \u001b[1;31m# Verbose modes need a full traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1301\u001b[0m             return VerboseTB.structured_traceback(\n\u001b[1;32m-> 1302\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0metype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtb_offset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnumber_of_lines_of_context\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1303\u001b[0m             )\n\u001b[0;32m   1304\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/andy/anaconda2/envs/tensorflow/lib/python2.7/site-packages/IPython/core/ultratb.pyc\u001b[0m in \u001b[0;36mstructured_traceback\u001b[1;34m(self, etype, evalue, etb, tb_offset, number_of_lines_of_context)\u001b[0m\n\u001b[0;32m   1184\u001b[0m                 \u001b[0mstructured_traceback_parts\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mformatted_exception\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1185\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1186\u001b[1;33m             \u001b[0mstructured_traceback_parts\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mformatted_exception\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1187\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1188\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mstructured_traceback_parts\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##########################################\n",
     "##                                      ##\n",
     "##              Parameters              ##\n",
     "##                                      ##\n",
     "##########################################\n",
-    "\n",
-    "# Default stdev for weights and biases\n",
-    "init_std = 0.05\n",
-    "# Default decay, if non-zero\n",
-    "init_decay = 0.0025\n",
     "\n",
     "learning_rate = 0.01 # Slightly higher since we are using batch norm\n",
     "training_epochs = 3 # Typically overfits around 2.5 epochs\n",
@@ -436,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
