fixed bug with transpose for visualization

--- a/Full Model with batch norm.ipynb
+++ b/Full Model with batch norm.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +123,7 @@
     "        weight_min = tf.reduce_min(weights)\n",
     "        weight_max = tf.reduce_max(weights)\n",
     "        weights_0_to_1 = (weights - weight_min) / (weight_max - weight_min)\n",
-    "        weights_transposed = tf.transpose(weights_0_to_1, [0, 1, 2, 3]) # [3, 0, 1, 2]\n",
+    "        weights_transposed = tf.transpose(weights_0_to_1, [3, 0, 1, 2])\n",
     "        tf.summary.image('filter', weights_transposed, 10) # Just follow 10 feature maps\n",
     "\n",
     "      if decay > 0:\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
