--- a/021_CNN_Color.ipynb
+++ b/021_CNN_Color.ipynb
@@ -426,7 +426,12 @@
       "----------------------------------------------------------------------\n",
       "Run the following to start tensorboard server:\n",
       "tensorboard --logdir=//home/ec2-user/code/cnn_svhn/logs/20170502_0617/\n",
-      "Current Learning Rate:  0.002\n"
+      "Current Learning Rate:  0.002\n",
+      "Validation accuracy at epoch 0: batch 499: 0.574\n",
+      "Validation accuracy at epoch 0: batch 999: 0.804\n",
+      "Validation accuracy at epoch 0: batch 1499: 0.834\n",
+      "Validation accuracy at epoch 0: batch 1999: 0.858\n",
+      "Validation accuracy at epoch 0: batch 2499: 0.85\n"
      ]
     }
    ],
@@ -447,9 +452,9 @@
     "  shuffled_indices.append(idx)\n",
     "\n",
     "# Training Parameters\n",
-    "train_batch_size = 200\n",
+    "train_batch_size = 100\n",
     "valid_batch_size = 500 #1000\n",
-    "valid_test_every = 250\n",
+    "valid_test_every = 500\n",
     "test_batch_size = 4000\n",
     "\n",
     "training_epochs = 1\n",
